apps/playerok-dev/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    environment: dev
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: dev
  template:
    metadata:
      labels:
        app: frontend
        environment: dev
        component: frontend
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: frontend
          image: harbor.devflux.ru/playerok-devflux/frontend-dev:v0.73.13-dev.716-sha.b41b61796f32
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
