apps/playerok-dev/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    environment: dev
    component: api
    monitoring.devflux.io/enabled: "true"
spec:
  type: ClusterIP
  selector:
    app: backend
    environment: dev
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
