apps/playerok-dev/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    environment: dev
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    environment: dev
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
